# qemu-vaccel

./: configure  meson.build  meson_options.txt
.github/workflows/: vaccel-build-and-upload.yml
backends/: Makefile.objs  accel-crypto.c  accel.c  acceldev-crypto.c  acceldev-generic.c  acceldev-vaccelrt.c  acceldev.c  meson.build
hw/virtio/: Kconfig  Makefile.objs  meson.build  virtio-accel-pci.c  virtio-accel.c  virtio-pci.h
include/hw/virtio/: virtio-accel.h  virtio-pci.h
include/standard-headers/linux/: virtio_accel.h
include/sysemu/: acceldev.h
qapi/: qom.json
scripts/: meson-buildoptions.sh
subprojects/vaccel/: meson.build  meson_options.txt
subprojects/vaccel/backends/: acceldev-vaccel.c  acceldev-vaccelrt.c  acceldev.c
subprojects/vaccel/docker/: Dockerfile  qemu-ifup  qemu-script.sh  vq-size.patch
subprojects/vaccel/hw/virtio/: virtio-accel-pci.c  virtio-accel.c
subprojects/vaccel/include/hw/virtio/: virtio-accel.h
subprojects/vaccel/include/standard-headers/linux/: accel.h  virtio_accel.h
subprojects/vaccel/include/sysemu/: acceldev.h
